--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <link
+        rel="stylesheet"
+        href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="styles/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -20,7 +26,7 @@
         <div class="header__contacts">
             <p class="header__contact">Телефон: <a href="tel:555-65-34">555-65-34</a></p>
             <span class="header__separator"></span>
-            <p class="header__contact header__contact-adres">адрес: <span>ул. московска, 35</span></p>
+            <p class="header__contact header__contact-adres">адрес: <span>ул. московская, 35</span></p>
         </div>
         <span class="header__decoration"></span>
         <button class="burger">
@@ -29,5 +35,76 @@
             <span></span>
         </button>
     </header>
+    <section class="main">
+        <aside class="aside">
+            <div class="aside__decoration"></div>
+            <ul class="aside__soc-list">
+                <li class="aside__soc-item">
+                    <a href="#" target="_blank" class="aside__soc-link">
+                        <img src="src/icons/social/vk-brands.svg" alt="social" class="aside__soc-img">
+                    </a>
+                </li>
+                <li class="aside__soc-item">
+                    <a href="#" target="_blank" class="aside__soc-link">
+                        <img src="src/icons/social/twitter-brands.svg" alt="social" class="aside__soc-img">
+                    </a>
+                </li>
+                <li class="aside__soc-item">
+                    <a href="#" target="_blank" class="aside__soc-link">
+                        <img src="src/icons/social/instagram-brands.svg" alt="social" class="aside__soc-img">
+                    </a>
+                </li>
+                <li class="aside__soc-item">
+                    <a href="#" target="_blank" class="aside__soc-link">
+                        <img src="src/icons/social/facebook-brands.svg" alt="social" class="aside__soc-img">
+                    </a>
+                </li>
+            </ul>
+            <div class="aside__share-icon">
+                <img src="src/icons/social/share-solid.svg" alt="share">
+            </div>
+        </aside>
+
+
+        <div class="slider">
+
+            <div class="swiper-img">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-img__slide">
+                        <div class="swiper-img__background" data-swiper-parallax="20%" style="background-image: url(src/slider-img/range1.jpg);"></div>
+                    </div>
+                    <div class="swiper-slide swiper-img__slide">
+                        <div class="swiper-img__background" data-swiper-parallax="20%" style="background-image: url(src/slider-img/range2.jpg);"></div>
+                    </div>
+                    <div class="swiper-slide swiper-img__slide">
+                        <div class="swiper-img__background" data-swiper-parallax="20%" style="background-image: url(src/slider-img/range3.jpg);"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="slider__bottom">
+                <ul class="slider__share-items">
+                    <li class="aside__soc-item slider__share-item">
+                        <a href="#" target="_blank" class="aside__soc-link">
+                            <img src="src/icons/social/vk-brands.svg" alt="social" class="aside__soc-img">
+                        </a>
+                    </li>
+                    <li class="aside__soc-item slider__share-item">
+                        <a href="#" target="_blank" class="aside__soc-link">
+                            <img src="src/icons/social/vk-brands.svg" alt="social" class="aside__soc-img">
+                        </a>
+                    </li>
+                    <li class="aside__soc-item slider__share-item">
+                        <a href="#" target="_blank" class="aside__soc-link">
+                            <img src="src/icons/social/vk-brands.svg" alt="social" class="aside__soc-img">
+                        </a>
+                    </li>
+                </ul>
+                <div class="slider__pagination">111</div>
+                <div class="slider__scrollbar">222</div>
+                <div class="slider__navigation">333</div>    
+            </div>
+        </div>
+    </section>
 </body>
 </html>  
