синхронизация двух слайдеров

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,6 +67,32 @@
 
 
         <div class="slider">
+         
+            <div class="swiper-txt">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide swiper-txt__slide">
+                        <div class="swiper-txt__content">
+                            <h2 class="swiper-txt__heading">Подбор внежарожника <span>на любой</span> случай</h2>
+                            <p class="swiper-txt__desc">Выберем и подберем для вас любой внедарожник в кратчайшие сроки, с учетом всех пожеланий и всех необходимых потребностей.</p>
+                            <button class="button swiper-txt__button"><span>оставить заявку</span></button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide swiper-txt__slide">
+                        <div class="swiper-txt__content">
+                            <h2 class="swiper-txt__heading">Индивидуальный подход <span>к каждому</span> покупателю</h2>
+                            <p class="swiper-txt__desc">все автомобили мы подбираем индивидуально для каждого клиента или покупателя и с трепетом относимся к результату нашей работы.</p>
+                            <button class="button swiper-txt__button"><span>оставить заявку</span></button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide swiper-txt__slide">
+                        <div class="swiper-txt__content">
+                            <h2 class="swiper-txt__heading">Выбор лучшей модели <span>из модельного</span> ряда</h2>
+                            <p class="swiper-txt__desc">В нашем модельном ряду имеется модели сотен различных внедорожников, которые удовлетворят даже самого требовательного клиента.</p>
+                            <button class="button swiper-txt__button"><span>оставить заявку</span></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="swiper-img">
                 <div class="swiper-wrapper">
@@ -81,6 +107,7 @@
                     </div>
                 </div>
             </div>
+
 
             <div class="slider__bottom">
                 <ul class="slider__share-items">
